some css changes so no overflow issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,21 +3,28 @@
 }
 
 body{
-    padding: 30px;
+    padding: 0px;
     overflow-x:hidden;
     background-image:url(/scrambleQuestGitRepo/files/viking-background.jpg);
     background-size:cover;
     background-repeat:no-repeat;
     background-position: center;
     min-height:100vh;
+    margin:0;
+    display:flex;
+    justify-content:center;
 }
-
+.input-bar{
+    display:flex;
+    justify-content:center;
+}
 .game-page {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    height:100%;
+    justify-content:space-between;
   }
 
 .game-content {
@@ -39,8 +46,7 @@ button {
 }
 
 button.letter { 
-    width: 101px;
-    height: 101px;
+    
     flex-shrink: 0;
     box-shadow: 0px 4px 4px 4px hsla(0, 0%, 0%, 0.25);
     display: flex;
@@ -54,11 +60,12 @@ button.letter {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     color: hsl(0, 0%, 80%);
     font-size: 48px;
+    transition:0.3s ease;
 }
 
 #letter-buttons-container {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     align-items: center;
     justify-content: center;
 }
@@ -121,7 +128,11 @@ button.letter {
     display: flex;
     justify-content: space-between;
   }
-  
+  .indicators{
+    width:100%;
+    gap:15px;
+    align-items:flex-end;
+  }
 .level, .life {
     flex: 1;
     text-align: center;
@@ -132,9 +143,7 @@ button.letter {
     line-height: normal;
   }
 
-.level {
-    padding-right: 60vw; 
-  }
+
   #level{
     color:red;
     font-size:30px;
